Вроде немношко победил фронт.

--- a/src/main/webapp/scss/variables.scss
+++ b/src/main/webapp/scss/variables.scss
@@ -1,6 +1,17 @@
+$size_xs: 4px;
+$size_s: 10px;
+$size_m: 16px;
+$size_l: 32px;
+$size_xl: 64px;
+
+$size_font_ratio: 1.5;
+
 $top_menu_height: 40px;
 
 $bg_color: #F0F0F0;
 
 $element_caption: #1B3A65;
 $element_caption_text: #CCD2DA;
+
+$panel_leading: 20px;
+
