--- a/src/main/webapp/scss/application.scss
+++ b/src/main/webapp/scss/application.scss
@@ -1,25 +1,20 @@
 @import "variables";
 @import "mixins";
+@import "html";
+@import "flex";
 
-body {
-  @include flex-col();
-  align-items: center;
-  margin: 0;
-  background-color: $bg_color;
-}
-
-h1, h2, h3, h4 {
-  margin: 0;
-}
+$application_with: 960px;
 
 #application {
-  min-width: 960px;
-  margin-top: $top_menu_height + 10px;
+  min-width: $application_with;
+  max-width: $application_with;
+  margin-top: $top_menu_height + $size_m;
 }
 
 .top-menu {
   @include flex-col();
   @include flex-just-center();
+
   position: absolute;
   align-items: center;
   left: 0;
@@ -28,14 +23,17 @@ h1, h2, h3, h4 {
   min-height: $top_menu_height;
   background-color: $element_caption;
   color: $element_caption_text;
+  z-index: 2;
+  box-shadow: 0 2px 1px rgba(15, 55, 76, .2);
 
   .top-menu_holder {
     @include flex-row();
     @include flex-al-center();
-    min-width: 960px;
-  }
-}
+    min-width: $application_with;
+    max-width: $application_with;
 
-.forum-group {
-  @include panel-full();
+    a {
+      color: rgba(255, 255, 255, 0.75);
+    }
+  }
 }
