--- a/src/main/webapp/scss/variables.scss
+++ b/src/main/webapp/scss/variables.scss
@@ -10,7 +10,7 @@ $top_menu_height: 40px;
 
 $bg_color: #F0F0F0;
 
-$element_caption: #1B3A65;
+$element_caption: #000;
 $element_caption_text: #CCD2DA;
 
 $panel_leading: 20px;
