--- a/src/main/webapp/application.css
+++ b/src/main/webapp/application.css
@@ -6,7 +6,8 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: #F0F0F0;
-  margin: 0; }
+  margin: 0;
+  overflow-y: scroll; }
 
 h1, h2, h3, h4 {
   margin: 0; }
@@ -25,6 +26,11 @@ section {
 p {
   margin: 0 0 10px;
   font-size: 15px; }
+
+._crutches_box {
+  position: absolute;
+  top: 0;
+  left: 0; }
 
 .flex-row {
   display: flex;
