--- a/src/main/webapp/application.css
+++ b/src/main/webapp/application.css
@@ -27,6 +27,9 @@ p {
   margin: 0 0 10px;
   font-size: 15px; }
 
+img {
+  height: 100%; }
+
 ._crutches_box {
   position: absolute;
   top: 0;
@@ -42,6 +45,21 @@ p {
 
 .flex-push-right {
   margin-left: auto; }
+
+img.game_main_image {
+  width: 300px;
+  height: 140px;
+  min-width: 320px;
+  max-width: 320px;
+  min-height: 140px;
+  max-height: 140px;
+  margin-right: 16px; }
+
+.tag_container {
+  flex-wrap: wrap; }
+
+.tag_container a {
+  margin-right: 4px; }
 
 #application {
   min-width: 960px;
